--- a/FileBackup/FileBackup.vcxproj
+++ b/FileBackup/FileBackup.vcxproj
@@ -36,7 +36,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_filename_info.cpp" />
+    <ClCompile Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_memory.cpp" />
     <ClCompile Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_mutex.cpp" />
+    <ClCompile Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_scoped_unicode_string.cpp" />
     <ClCompile Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_utility.cpp" />
     <ClCompile Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_wstring.cpp" />
     <ClCompile Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_strutils.cpp" />
@@ -225,7 +227,9 @@
     <ClInclude Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_define.h" />
     <ClInclude Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_filename_info.h" />
     <ClInclude Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_logger.h" />
+    <ClInclude Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_memory.h" />
     <ClInclude Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_mutex.h" />
+    <ClInclude Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_scoped_unicode_string.h" />
     <ClInclude Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_utility.h" />
     <ClInclude Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_wstring.h" />
     <ClInclude Include="..\..\fibo-windows-kernel-lib\FiboKernelLib\ke_strutils.h" />
